--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -5,7 +5,7 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  background: vars.$color2;
+  background: rgba(0, 0, 255, 0.295);
   padding: vars.$gutter;
   border-radius: 5px;
   -webkit-box-shadow: inset 1px 1px 5px #fff;
