--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -22,90 +22,28 @@
     align-self: center;
   }
 
+  &__img {
+    background-color: grey;
+    width: 100%;
+    height: 350px;
+    margin-bottom: 1em;
+  }
+
   &__desc {
     height: 100%;
     display: flex;
     flex-direction: column;
     
-    &__type {
-      margin-bottom: 0.25em;
-    }
-    &__apr {
-      margin-bottom: 0.25em;
+    &__item {
+      margin-bottom: 0.5em;
     }
   }
 
-  &__form {
-    display: flex;
-    flex-direction: column;
-    &__stake {
-      display: flex;
-      background-color: vars.$color3;
-      padding: 0.5em;
-      margin-bottom: vars.$halfGutter;
-      &__input {
-        color: #EEE;
-        background: none;
-        border: none;
-      }
-      &__usemax:hover {
-        color: blue;
-        cursor: pointer;
-      }
-    }
-    &__btn:hover {
-      color: blue;
-    }
-    &__btn {
-      color: #EEE;
-      background-color: vars.$color3;
-      padding: 1em;
-      border: none;
-      border-radius: 5px;
-      -webkit-box-shadow: inset 1px 1px 5px #fff;
-      box-shadow: inset 1px 1px 5px #fff;
-    }
-  }
 
-  &__infos {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    &__stacked {
-      margin-bottom: 0.25em;
-    }
-    &__rewards {
-      margin-bottom: 0.25em;
-    }
-  }
+}
 
-  &__actions {
-    display: flex;
-    flex-direction: column;
-    &__unstake:hover {
-      color: blue;
-    }
-    &__unstake {
-      color: #EEE;
-      background-color: vars.$color3;
-      padding: 1em;
-      border: none;
-      border-radius: 5px;
-      -webkit-box-shadow: inset 1px 1px 5px #fff;
-      box-shadow: inset 1px 1px 5px #fff;
-    }
-    &__collect:hover {
-      color: blue;
-    }
-    &__collect {
-      color: #EEE;
-      background-color: vars.$color3;
-      padding: 1em;
-      border: none;
-      border-radius: 5px;
-      -webkit-box-shadow: inset 1px 1px 5px #fff;
-      box-shadow: inset 1px 1px 5px #fff;
-      margin-bottom: 0.8em;
-    }
+@media screen and (max-width: 640px) {
+  .card {
+    width: 100%;
   }
 }
