--- a/src/components/Cards/Cards.module.scss
+++ b/src/components/Cards/Cards.module.scss
@@ -7,3 +7,10 @@
   flex-wrap: wrap;
   overflow: hidden;
 }
+
+@media screen and (max-width: 640px) {
+  .cards {
+    justify-content: center;
+    padding: 0 1em 0 1em;
+  }
+}
