--- a/src/components/Main/Main.module.scss
+++ b/src/components/Main/Main.module.scss
@@ -6,6 +6,8 @@
   min-height: 100vh;
   margin: auto;
   padding: vars.$gutter 0;
+  display: flex;
+  flex-direction: column;
 
   &__title {
     font-size: 1.7em;
@@ -36,5 +38,12 @@
 
       }
     }
+  }
+}
+
+@media screen and (max-width: 640px) {
+  .main {
+    width: 100%;
+    align-items: center;
   }
 }
