--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -3,43 +3,49 @@
 .card {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   align-items: center;
   background: rgba(0, 0, 255, 0.295);
-  padding: vars.$gutter;
   border-radius: 5px;
   -webkit-box-shadow: inset 1px 1px 5px #fff;
   box-shadow: inset 1px 1px 5px #fff;
   border: 1px solid rgba(0,0,0,.2);
   margin-bottom: vars.$gutter;
-  width: 400px;
-  height: 400px;
+  width: 350px;
+  height: 600px;
+  overflow: hidden;
 
-  &__title {
-    font-size: 1.2em;
-    font-weight: bold;
-    margin-bottom: 0.5em;
-    align-self: center;
-  }
 
   &__img {
-    background-color: grey;
+    background-color: rgba(128, 128, 128, 0.46);
     width: 100%;
     height: 350px;
-    margin-bottom: 1em;
-  }
-
-  &__desc {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    
-    &__item {
-      margin-bottom: 0.5em;
+    position: relative;
+    &__error {
+      text-align: center;
+      margin-top: 20%;
     }
   }
 
+  &__text {
+    padding: vars.$gutter;
+    &__desc {
+      height: 100%;
+      display: flex;
+      flex-direction: column;
 
+      
+      &__item {
+        margin-bottom: 1em;
+      }
+    }
+    
+    &__title {
+      font-size: 1.2em;
+      font-weight: bold;
+      margin-bottom: 0.5em;
+      align-self: center;
+    }
+  }
 }
 
 @media screen and (max-width: 640px) {
