--- a/src/components/Controls/Controls.module.scss
+++ b/src/components/Controls/Controls.module.scss
@@ -3,6 +3,7 @@
 .controls {
   display: flex;
   flex-direction: column;
+  margin-left: 2em;
 
   &__title {
     font-weight: bold;
@@ -16,7 +17,7 @@
     justify-content: space-between;
     &__btn {
       border: white 1px solid;
-      border-radius: 5%;
+      border-radius: 15px;
       padding: 0.5em;
       margin-left: 2em;
       &__asc {
@@ -33,5 +34,23 @@
     }
   }
 
+  
+}
+
+@media screen and (max-width: 640px) {
+  .controls {
+    margin-left: 0;
+    &__title {
+      margin-bottom: 0.2em;
+    }
+    &__btns {
+      display: flex;
+      justify-content: space-between;
+      &__btn {
+        
+        margin-left: 0;
+      }
+    }
+  }
   
 }
