--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -28,16 +28,28 @@
   }
   &__title:hover {
     color:blue;
+    
     cursor: pointer;
   }
   &__title {
     font-size: 5em;
     font-weight: bold;
+    align-self: flex-end;
   }
 }
 
 @media screen and (max-width: 640px) {
+  .header__container {
+    padding: 0.5em;
+    
+    
+  }
   .header {
     flex-direction: column;
+    width: 100%;
+    &__title {
+      align-self: center;
+      font-size: 4em;
+    }
   }
 }
