deleting unwanted product

--- a/src/components/Category/Category.module.scss
+++ b/src/components/Category/Category.module.scss
@@ -19,7 +19,7 @@
     padding: 1em;
     color: white;
     &__option {
-      background-color: blue;
+      background-color: rgb(255, 170, 72);
     }
   }
 
