--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -3,7 +3,7 @@
 .card {
   display: flex;
   flex-direction: column;
-  background: vars.$color3;
+  background: vars.$color4;
   border-radius: 25px;
   -webkit-box-shadow: inset 1px 1px 5px #fff;
   box-shadow: inset 1px 1px 5px #fff;
@@ -46,7 +46,9 @@
       margin-bottom: 1em;
 
       &__ref {
-        color: rgb(109, 109, 109);
+        text-align: center;
+        color: rgb(255, 136, 0);
+        font-size: 1.3em;
       }
     }
   }
