--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -5,3 +5,4 @@ $halfGutter: math.div($gutter, 2);
 $color1: rgb(41, 92, 160);
 $color2: rgba(137, 181, 240, 0.5);
 $color3: rgba(202, 222, 248, 0.5);
+$color4: rgb(34, 77, 133);
