--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -53,6 +53,15 @@
     }
   }
 }
+@media screen and (max-width: 1280px) {
+  .card {
+    width: 300px;
+    height: 550px;
+    &__img {
+      height: 300px;
+    }
+  }
+}
 
 @media screen and (max-width: 640px) {
   .card {
