--- a/src/components/Cards/Cards.module.scss
+++ b/src/components/Cards/Cards.module.scss
@@ -6,6 +6,7 @@
   flex-wrap: wrap;
   justify-content: space-between;
   overflow: hidden;
+  gap: 3em;
   &::after {
     content: '';
     flex: auto;
