--- a/src/components/Controls/Controls.module.scss
+++ b/src/components/Controls/Controls.module.scss
@@ -2,11 +2,21 @@
 
 .controls {
   display: flex;
-  flex-direction: column;
   margin-left: 2em;
-  flex: 1;
+  flex: 3;
+
+  &__sorting {
+    display: flex;
+    flex-direction: column;
+  }
+
+  &__viewmode {
+    display: flex;
+    flex-direction: column;
+  }
 
   &__title {
+    align-self: flex-start;
     font-weight: bold;
     margin-bottom: 1em;
     text-align: center;
@@ -15,12 +25,17 @@
 
   &__btns {
     display: flex;
-    justify-content: space-between;
+    align-self: flex-start;
+
     &__btn {
       border: white 1px solid;
       border-radius: 15px;
       padding: 0.5em;
-      margin-left: 2em;
+      margin-left: 0.5em;
+
+      &:first-child {
+        margin-left: 0;
+      }
       &__asc {
         background-color: green;
       }
@@ -35,6 +50,21 @@
     }
   }
 
+  
+}
+
+@media screen and (max-width: 1280px) {
+  .controls {
+    justify-content: space-between;
+    &__btns {
+      display: flex;
+      flex-direction: column;
+
+      &__btn {
+        margin: 0 0 0.5em 0;
+      }
+    }
+  }
   
 }
 
