--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -6,8 +6,9 @@
   padding: 0.9em;
   border-radius: 15px;
   background-color: rgba(255, 255, 255, 0);
-  flex:1;
-  margin: 0 2em;
+  flex:2;
+  margin: 0 1em 0 0;
+  min-width: 150px;
 
   &__input {
     border: none;
