--- a/src/components/Cardlist/Cardlist.module.scss
+++ b/src/components/Cardlist/Cardlist.module.scss
@@ -52,11 +52,54 @@
 }
 @media screen and (max-width: 1280px) {
   .card {
+    height: 150px;
+
+    &__img {
+      width: 150px;
+    }
   }
 }
 
 @media screen and (max-width: 640px) {
   .card {
-    width: 100%;
+    height: 250px;
+    overflow: auto;
+
+  white-space: nowrap;
+
+    &__img {
+      display: none;
+    }
+
+    &__text {
+      padding: vars.$halfGutter;
+      &__desc {
+        max-height: 100%;
+        display: flex;
+        align-items: center;
+        
+        &__item {
+          margin-bottom: 1em;
+          &:last-child {
+            margin-bottom: 0;
+          }
+          &__container {
+            margin-left: 2em;
+          }
+        }
+      }
+      
+      &__title {
+        font-size: 1.2em;
+        font-weight: bold;
+        margin-bottom: 1em;
+  
+        &__ref {
+          text-align: center;
+          color: rgb(255, 136, 0);
+          font-size: 1.3em;
+        }
+      }
+    }
   }
 }
